# keyboard_layout_generator

./: .bazelrc  BUILD  MODULE.bazel  catch_string_helper.hpp  requirements.in  requirements_lock.txt
finger_keyboard_mapping/: BUILD  both_hands.hpp  dump_keyboard_shape.cpp  finger_print_helpers.hpp  finger_to_key_mapping.cpp  finger_to_key_mapping.hpp  fingers.hpp  frame.hpp  from_proto.hpp  key.hpp  keyboard_default_shape.cpp  keyboard_shape_to_proto.hpp  keyboard_timeline.cpp  keyboard_timeline.hpp  keyboard_timeline.proto  keyboard_timeline_proto.hpp  main.cpp  mapping_geometry.hpp  mapping_geometry_literals.inl  print_kb.py  scancode_key_map.cpp  scancode_key_map.hpp  static_vector.hpp
finger_keyboard_mapping/hands/: BUILD.bazel  both_hands.hpp  finger_desc.hpp  finger_print_helpers.hpp  finger_ref.hpp  frame.hpp  hand_side.hpp  maybe_finger.hpp
finger_keyboard_mapping/keyboard/: BUILD.bazel  dump_keyboard_shape.cpp  key.hpp  key_print_helpers.hpp  keyboard_default_shape.cpp  keyboard_shape.cpp  keyboard_shape.hpp  keyboard_shape.proto  keyboard_shape_to_proto.hpp  scancode_key_map.cpp  scancode_key_map.hpp
finger_keyboard_mapping/mapping/: BUILD.bazel  closest_finger_mapping.cpp  closest_finger_mapping.hpp  finger_to_key_mapping.cpp  finger_to_key_mapping.hpp  map_keylog_timeline.cpp  map_keylog_timeline.hpp
finger_keyboard_mapping/tests/: BUILD  closest_finger_mapping_test.cpp  hands_iteration_test.cpp  key_hash_test.cpp  keyboard_timeline_test.cpp  print_helpers.hpp  scancode_key_map_test.cpp
finger_landmarks/: BUILD  draw_landmarks_annotations.py  finger_landmarks.proto  finger_tracking_results.py  keyboard_corners.py  keyboard_shape_recorder.py  landmarks_runner.py  print_kb.py  print_landmarks.py  results_to_proto.py  rotation_enum.py  video_tracking.py
keylogger/: BUILD  keylog.proto  keylogger_main.cpp
layout_generator/: BUILD.bazel  azerty_voyager_layout.cpp  azerty_voyager_layout.hpp  build_corpus.cpp  build_corpus.hpp  key_press.hpp  keyboard_layout.hpp  keyboard_layout_iterator.inl  keyboard_layout_print_helper.hpp  keyboard_shape.hpp  layout_key_ref.hpp  layout_print_helpers.hpp  main.cpp  row_col.hpp  to_shifted_keys.hpp  voyager_shape.cpp  voyager_shape.hpp
layout_generator/generator/: BUILD.bazel  annealing.hpp  generator.cpp  generator.hpp  worker.hpp
layout_generator/key_press_calculator/: BUILD.bazel  key_press_calculator.cpp  key_press_calculator.hpp  to_shifted_keys.hpp
layout_generator/mutation/: BUILD.bazel  layout_mutator.hpp
layout_generator/penalties/: BUILD.bazel  ngraphs.cpp  ngraphs.hpp  penalize_base_penalty.hpp  penalize_digraphs.hpp  penalize_quartads.hpp  penalize_trigraph.hpp  penalty_calculator.cpp  penalty_calculator.hpp  penalty_calculator_default_penalties.cpp
layout_generator/penalties/digraph/: penalize_base_penalty.hpp  penalize_distance_to_home_row.hpp  penalize_same_finger_twice.hpp
layout_generator/simulator/: BUILD.bazel  simulator.cpp  simulator.hpp  simulator_penalties.cpp
layout_generator/tests/: BUILD.bazel  key_press_calculator_test.cpp  keyboard_layout_test.cpp  mutate_layout_test.cpp  ngraph_set_test.cpp  simulator_test.cpp
statistics/: BUILD.bazel  key_sequence_printer.hpp  main.cpp
statistics/finger_key_frequency/: BUILD.bazel  finger_to_key_association.hpp  finger_to_key_association_printer.cpp  finger_to_key_map.hpp
