module(
    name = "finger_tracking",
    version = "0.0.1",
    compatibility_level = 1,
)

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "catch2", version = "3.7.1")
bazel_dep(name = "protobuf", version = "29.2")
bazel_dep(name = "abseil-cpp", version = "20240722.0.bcr.2")
bazel_dep(name = "fmt", version = "11.1.2")
bazel_dep(name = "platforms", version = "0.0.11")

bazel_dep(name = "rules_python", version = "1.0.0", dev_dependency = True)

range_v3_ext = use_extension("//third_party:range_v3_extension.bzl", "range_v3")
use_repo(range_v3_ext, "range-v3")

python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = True)
python.toolchain(
    is_default = True,
    python_version = "3.12",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.12",
    requirements_lock = "requirements_lock.txt",
)
use_repo(pip, "pypi")
