load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(default_visibility = ["//:layout_generator"])

cc_binary(
    name = "layout_generator",
    srcs = ["main.cpp"],
    deps = [
        ":keyboard_layout",
        ":voyager_shape",
        "//finger_keyboard_mapping/hands:finger_print_helpers",
        "//finger_keyboard_mapping/keyboard:key_print_helpers",
        "//finger_keyboard_mapping/keyboard:keyboard_shape_to_proto",
    ],
)

cc_library(
    name = "voyager_shape",
    srcs = ["voyager_shape.cpp"],
    hdrs = ["voyager_shape.hpp"],
    deps = [
        ":keyboard_shape",
        "@range-v3",
    ],
)

cc_library(
    name = "keyboard_shape",
    hdrs = ["keyboard_shape.hpp"],
    deps = ["//finger_keyboard_mapping:geometry"],
)

cc_library(
    name = "keyboard_layout",
    hdrs = [
        "keyboard_layout.hpp",
        "keyboard_layout_iterator.inl",
    ],
    deps = [
        ":keyboard_shape",
        "//finger_keyboard_mapping/hands:fingers_and_hands",
    ],
)
