load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(default_visibility = ["//:layout_generator"])

cc_binary(
    name = "layout_generator",
    srcs = ["main.cpp"],
    deps = [
        ":azerty_voyager_layout",
        ":corpus_builder",
        "//finger_keyboard_mapping/hands:finger_print_helpers",
        "//finger_keyboard_mapping/keyboard:key_print_helpers",
        "//finger_keyboard_mapping/keyboard:keyboard_shape_to_proto",
        "//layout_generator/penalties:penalty_calculator",
        "//layout_generator/simulator",
    ],
)

cc_library(
    name = "keyboard_layout",
    hdrs = [
        "keyboard_layout.hpp",
        "keyboard_layout_iterator.inl",
    ],
    deps = [
        ":keyboard_shape",
        ":layout_key_ref",
        ":row_col",
        "//finger_keyboard_mapping/keyboard:key",
    ],
)

cc_library(
    name = "row_col",
    hdrs = ["row_col.hpp"],
)

cc_library(
    name = "key_press",
    hdrs = ["key_press.hpp"],
    deps = [
        ":layout_key_ref",
        ":row_col",
        "//finger_keyboard_mapping:geometry",
        "//finger_keyboard_mapping/hands:finger_desc",
        "//finger_keyboard_mapping/keyboard:key",
        "@abseil-cpp//absl/hash",
    ],
)

cc_library(
    name = "keyboard_shape",
    hdrs = ["keyboard_shape.hpp"],
    deps = [
        ":layout_key_ref",
        "//finger_keyboard_mapping:geometry",
        "//finger_keyboard_mapping/hands:finger_desc",
    ],
)

cc_library(
    name = "layout_key_ref",
    hdrs = ["layout_key_ref.hpp"],
    deps = [
        ":row_col",
        "//finger_keyboard_mapping/hands:hand_side",
    ],
)

cc_library(
    name = "azerty_voyager_layout",
    srcs = ["azerty_voyager_layout.cpp"],
    hdrs = ["azerty_voyager_layout.hpp"],
    deps = [
        ":keyboard_layout",
        ":voyager_shape",
    ],
)

cc_library(
    name = "voyager_shape",
    srcs = ["voyager_shape.cpp"],
    hdrs = ["voyager_shape.hpp"],
    deps = [
        ":keyboard_shape",
        "@range-v3",
    ],
)

cc_library(
    name = "corpus_builder",
    srcs = ["build_corpus.cpp"],
    hdrs = ["build_corpus.hpp"],
)

cc_library(
    name = "layout_print_helpers",
    hdrs = ["layout_print_helpers.hpp"],
    deps = [
        ":key_press",
        ":layout_key_ref",
        "@fmt",
    ],
)
