load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "finger_print_helpers",
    hdrs = ["finger_print_helpers.hpp"],
    deps = [
        ":fingers_and_hands",
        "@fmt",
    ],
)

cc_library(
    name = "hand_side",
    hdrs = ["hand_side.hpp"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "fingers_and_hands",
    hdrs = [
        "both_hands.hpp",
        "frame.hpp",
    ],
    deps = [
        ":finger_desc",
        ":hand_side",
        "//finger_keyboard_mapping:geometry",
    ],
)

cc_library(
    name = "finger_desc",
    hdrs = ["finger_desc.hpp"],
    visibility = ["//visibility:public"],
    deps = [":hand_side"],
)

cc_library(
    name = "maybe_finger",
    hdrs = ["maybe_finger.hpp"],
    deps = [":fingers_and_hands"],
)
