load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//:layout_generator"])

cc_library(
    name = "generator",
    srcs = ["generator.cpp"],
    hdrs = ["generator.hpp"],
    deps = [
        "//layout_generator/key_press_calculator",
        "//layout_generator/penalties:penalty_calculator",
        "@fmt",
    ],
)
