load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//:layout_generator"])

cc_library(
    name = "generator",
    srcs = [
        "annealing.hpp",
        "generator.cpp",
    ],
    hdrs = ["generator.hpp"],
    deps = [
        "//layout_generator/key_press_calculator",
        "//layout_generator/mutation:layout_mutator",
        "//layout_generator/penalties:penalty_calculator",
        "@fmt",
        "@range-v3",
    ],
)

cc_library(
    name = "worker",
    hdrs = ["worker.hpp"],
)
