load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(default_visibility = ["//:layout_generator"])

cc_library(
    name = "penalty_calculator",
    srcs = [
        "penalty_calculator.cpp",
        "penalty_calculator_default_penalties.cpp",
    ],
    hdrs = ["penalty_calculator.hpp"],
    deps = [
        ":digraph_penalties",
        ":ngraphs",
        ":quartad_penalties",
        ":trigraph_penalties",
        "//layout_generator:key_press",
    ],
)

cc_library(
    name = "ngraphs",
    srcs = ["ngraphs.cpp"],
    hdrs = ["ngraphs.hpp"],
    deps = [
        "//layout_generator:key_press",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@range-v3",
    ],
)

cc_library(
    name = "digraph_penalties",
    hdrs = [
        "penalize_base_penalty.hpp",
        "penalize_digraphs.hpp",
    ],
    deps = [
        ":ngraphs",
        "//layout_generator:key_press",
        "//layout_generator:row_col",
    ],
)

cc_library(
    name = "trigraph_penalties",
    hdrs = ["penalize_trigraph.hpp"],
    deps = [
        ":ngraphs",
        "//layout_generator:row_col",
    ],
)

cc_library(
    name = "quartad_penalties",
    hdrs = ["penalize_quartads.hpp"],
    deps = [
        ":ngraphs",
        "//layout_generator:row_col",
    ],
)
