load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_test(
    name = "keyboard_layout_test",
    srcs = ["keyboard_layout_test.cpp"],
    deps = [
        "//finger_keyboard_mapping/keyboard:key_print_helpers",
        "//layout_generator:keyboard_layout",
        "//layout_generator:voyager_shape",
        "@catch2//:catch2_main",
    ],
)
