load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_test(
    name = "keyboard_layout_test",
    srcs = ["keyboard_layout_test.cpp"],
    deps = [
        "//:catch_string_helper",
        "//finger_keyboard_mapping/hands:finger_print_helpers",
        "//layout_generator:keyboard_layout",
        "//layout_generator:layout_print_helpers",
        "//layout_generator:voyager_shape",
        "@catch2//:catch2_main",
    ],
)

cc_test(
    name = "simulator_test",
    srcs = ["simulator_test.cpp"],
    deps = [
        "//:catch_string_helper",
        "//finger_keyboard_mapping/hands:finger_print_helpers",
        "//finger_keyboard_mapping/keyboard:key_print_helpers",
        "//layout_generator:azerty_voyager_layout",
        "//layout_generator:layout_print_helpers",
        "//layout_generator/simulator",
        "@catch2//:catch2_main",
    ],
)

cc_test(
    name = "ngraph_set_test",
    srcs = ["ngraph_set_test.cpp"],
    deps = [
        "//:catch_string_helper",
        "//finger_keyboard_mapping/hands:finger_print_helpers",
        "//finger_keyboard_mapping/keyboard:key_print_helpers",
        "//layout_generator:azerty_voyager_layout",
        "//layout_generator/penalties:ngraphs",
        "//layout_generator/simulator",
        "@catch2//:catch2_main",
    ],
)
